--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
 .App {
-  text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 25px;
+    flex-wrap: wrap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+    /* position: fixed; */
+    font-size: 16px;
+    text-align: center;
+    padding: 10px;
+    margin: 10px auto 50px;
+    flex: 1 0 100%;
+    background-color: whitesmoke;
+    color: teal;
+    width: 90%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.articles {
+    width: 60%;
+    
+}
+
+
+.eacharticle {
+    display: flex;
+    align-items: center;
+    border: 1px solid teal;
+    border-radius: 15px;
+    width: 80%;
+    overflow: hidden;
+
+    margin: 10px auto;
+}
+
+.eacharticle div {
+    width: 90%;
+}
+
+.eacharticle img {
+    width: 150px;
+    height: 150px;
+    
+}
+
+@media (max-width: 700px) {
+    .eacharticle img {
+        width: 150px;
+        height: 150px;
+        inline-size: auto;
+    }
+}
+
+.newarticle {
+    width: 35%;
+    
+}
+
+.newarticle form, .register form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    border: 1px solid teal;
+    padding: 10px;
+}
+
+.onlythreelines {
+--lh: 1.4rem;
+  line-height: var(--lh);
+  --max-lines: 3;
+  position: relative;
+  max-height: calc(var(--lh) * var(--max-lines));
+  overflow: hidden;
+  padding-right: 1rem; /* space for ellipsis */
+}
+
+.onlythreelines::before {
+    position: absolute;
+    content: "...";
+  /*   inset-block-end: 0;
+    inset-inline-end: 0; */
+    bottom: 0;
+    right: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .onlythreelines::after {
+    content: "";
+    position: absolute;
+  /*   inset-inline-end: 0; */
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    background: white;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+@media (max-width: 700px) {
+    .App {
+        flex-direction: column;
+    }
+    
+    .articles {
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    .eacharticle {
+        width: 100%;
+        margin: 10px auto;
+        flex-direction: column;
+    }
+
+    .newarticle {
+        width: 90%;
+        margin: 0px auto 10px;
+        text-align: center;
+    }
 }
+
+/* https://firebasestorage.googleapis.com/v0/b/betablog-9c10a.appspot.com/o/images%2F1652351006500mustopha.png?alt=media&token=5f45f82b-5502-4ffb-bdd0-1dcb59a14fd1
+
+https://firebasestorage.googleapis.com/v0/b/betablog-9c10a.appspot.com/o/images%2F1652351006500mustopha.png?alt=media&token=0cf61428-0c01-46d2-acec-ecae428f2b48
+
+https://firebasestorage.googleapis.com/v0/b/betablog-9c10a.appspot.com/o/images%2Fmustopha.png?alt=media&token=0cf61428-0c01-46d2-acec-ecae428f2b48
+
+https://firebasestorage.googleapis.com/v0/b/betablog-9c10a.appspot.com/o/images%2Fppppppp.PNG?alt=media&token=31e6a339-b965-40c0-af32-d15c69874268 */
